# Luxoft-Test-Assignment

./: .clang-tidy  CMakeLists.txt  README.md  build.sh  conanfile.py
.github/workflows/: workflow.yml
lib/: CMakeLists.txt
lib/increment_number_problem/: CMakeLists.txt
lib/increment_number_problem/include/increment_number_problem/: increment_number_problem.hpp
lib/increment_number_problem/src/: increment_number_problem.cpp
lib/knights_tour_problem/: CMakeLists.txt
lib/knights_tour_problem/include/knights_tour_problem/: knights_tour_problem.hpp
lib/knights_tour_problem/src/: knights_tour_problem.cpp
src/: CMakeLists.txt
src/increment-number-problem/: CMakeLists.txt  main.cpp
src/knights-tour-problem/: CMakeLists.txt  main.cpp
test/unittest/: CMakeLists.txt
test/unittest/test-increment-number-problem/: CMakeLists.txt  main.cpp
test/unittest/test-knights-tour-problem/: CMakeLists.txt  main.cpp
